--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -1,33 +1,36 @@
 plugins {
     // id for library
     // id for maven to publish jar to local repository
+    id 'maven-publish'
 }
 
 java {
 // provide sourceCompatibility
+    sourceCompatibility = 17
 }
 
 repositories {
-// provide repository, where required dependencies are located
+    mavenCentral()
 }
 
 publishing {
     publications {
         maven(MavenPublication) {
-// provide groupId
-// provide artifactId
-// provide version
-
             from components.java
         }
     }
 }
 
 //add Apache Apache Commons Lang 3.10 (or higher) dependency
-
+dependencies {
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
+}
 jar {
     manifest {
         //provide manifest with such attributes as 'Implementation-Title', 'Implementation-Version'
+        attributes('Implementation-Title': project.name,
+                'Implementation-Version': project.version)
     }
 }
 
